fead: implement verification of user data

--- a/src/sass/abstract/_constants.scss
+++ b/src/sass/abstract/_constants.scss
@@ -1,2 +1,3 @@
-$color-header: #171a1bc9;
+$color-header: radial-gradient(circle, rgba(141, 218, 213, 1) 0%, rgba(0, 205, 172, 1) 100%);
+$color-body: linear-gradient(-225deg, #fffeff 0%, #d7fffe 100%);
 $color-contacts: #ffffff;
