--- a/src/sass/abstract/_mixins.scss
+++ b/src/sass/abstract/_mixins.scss
@@ -1,6 +1,7 @@
-@mixin font($size, $height: $size, $weight: bold, $style: normal) {
+@mixin font($size, $height: $size, $weight: bold, $style: normal, $color: #000000) {
   font-style: $style;
   font-weight: $weight;
   font-size: $size;
   line-height: $height;
+  color: $color;
 }
