--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -9,15 +9,7 @@ body {
   justify-content: center;
   min-height: 100vh;
 
-  background-image: linear-gradient(
-  to top,
-  lightgrey 0%,
-  lightgrey 1%,
-  #e0e0e0 26%,
-  #efefef 48%,
-  #d9d9d9 75%,
-  #bcbcbc 100%
-  );
+  background-image: $color-body;
   background-size: cover;
   background-blend-mode: multiply, multiply;
 
