--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,5 +9,10 @@
 @import "base/base";
 
 //  Components
+@import "components/auth-tool";
+@import "components/wrapper";
 // Layout
+@import "layouts/header";
+@import "layouts/main";
+@import "layouts/footer";
 // pages
