--- a/src/sass/components/_auth-tool.scss
+++ b/src/sass/components/_auth-tool.scss
@@ -7,11 +7,11 @@
     cursor: pointer;
 
     @extend %transition;
-    @include font($size: 1.6rem, $height: 2.7rem, $color: #ffffffc7);
+    @include font($size: 1.6rem, $height: 2.7rem, $color: $color-menu-elements);
   }
 
   &__button:hover {
-    color: #ffffff;
+    color: $color-menu-elements-hover;
   }
 
   .log-in {
