feat: add preloader page

--- a/src/sass/abstract/_savannah-constants.scss
+++ b/src/sass/abstract/_savannah-constants.scss
@@ -2,5 +2,5 @@ $color-header: radial-gradient(circle, rgba(141, 218, 213, 1) 0%, rgba(0, 205, 1
 $color-body: linear-gradient(-225deg, #fffeff 0%, #d7fffe 100%);
 $color-menu-elements: #ffffffc7;
 $color-menu-elements-hover: #ffffff;
-$main-color: #064538;
+$main-color: #3D7B80;
 $text-color: #054e3e;
