--- a/src/sass/savannah-game.scss
+++ b/src/sass/savannah-game.scss
@@ -13,6 +13,7 @@
 @import "components/savannah-button";
 @import "components/savannah-closeBtn";
 @import "components/savannah-rating";
+@import "components/savannah-preloader";
 
 // Layout
 @import "layouts/savannah-header";
