feat: add navigation menu

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,8 @@
 //  Components
 @import "components/auth-tool";
 @import "components/wrapper";
+@import "components/burger-menu";
+@import "components/header-navigation";
 // Layout
 @import "layouts/header";
 @import "layouts/main";
