--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,10 +1,10 @@
 .header {
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
 
   display: flex;
-  justify-content: center;
+  align-items: center;
   height: 46px;
   padding: 0 20px;
 
