--- a/src/sass/components/_savannah-button.scss
+++ b/src/sass/components/_savannah-button.scss
@@ -1,31 +1,38 @@
 .app__button {
-    display: inline-block;
-    cursor: pointer;
-    appearance: none;
-    font-size: 24px;
-    font-weight: 300;
-    line-height: 1;
-    text-align: center;
-    padding: 19px 15px 21px;
-    text-decoration: none!important;
-    min-width: 162px;
-    color: #fff;
-    background: $main-color;
-    border: none;
-    border-radius: 10px;
-    transition: all .15s ease;
-    outline: none;
-    &:hover {
-        color: $main-color;
-        background: #fff;
-        border: 1px solid $main-color;
-    }
-    &_close {
-        padding: 11px 0;
-        width: 200px;
-        border-radius: 4px;
-        font-size: 14px;
-        font-weight: 600;
-        margin-top: 48px;
-    }
+  display: inline-block;
+  min-width: 162px;
+  padding: 19px 15px 21px;
+
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 1;
+  text-align: center;
+  color: #ffffff;
+  text-decoration: none!important;
+
+  background: $main-color;
+  border: none;
+  border-radius: 10px;
+  outline: none;
+  cursor: pointer;
+
+  transition: all 0.15s ease;
+
+  appearance: none;
+  &:hover {
+    color: $main-color;
+
+    background: #ffffff;
+    border: 1px solid $main-color;
+  }
+  &_close {
+    width: 200px;
+    margin-top: 48px;
+    padding: 11px 0;
+
+    font-weight: 600;
+    font-size: 14px;
+
+    border-radius: 4px;
+  }
 }
