--- a/src/sass/components/_savannah-closeBtn.scss
+++ b/src/sass/components/_savannah-closeBtn.scss
@@ -1,29 +1,34 @@
 .close {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+
+  width: 32px;
+  height: 32px;
+
+  opacity: 0.3;
+
+  &:hover {
+    opacity: 1;
+  }
+
+  &:before,
+  &:after {
+    content: " ";
     position: absolute;
-    right: 10px;
-    top: 5px;
-    width: 32px;
-    height: 32px;
-    opacity: 0.3;
+    left: 15px;
 
-    &:hover {
-        opacity: 1;
-    }
+    width: 2px;
+    height: 33px;
 
-    &:before, &:after {
-        position: absolute;
-        left: 15px;
-        content: ' ';
-        height: 33px;
-        width: 2px;
-        background-color: #333;
-    }
+    background-color: #333333;
+  }
 
-    &:before{
-        transform: rotate(45deg);
-    }
+  &:before {
+    transform: rotate(45deg);
+  }
 
-    &:after{
-        transform: rotate(-45deg);
-    }
+  &:after {
+    transform: rotate(-45deg);
+  }
 }
