--- a/src/sass/layouts/_savannah-modal.scss
+++ b/src/sass/layouts/_savannah-modal.scss
@@ -1,53 +1,60 @@
 .app__modal {
-    display: none;
-    /* display: flex; */
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    max-width: 100%;
-    z-index: 999;
-    padding: 160px 16px 16px;
-    background-color: rgba(0,0,0,.6);
-    justify-content: center;
-    align-items: flex-start;
-    border-radius: 0;
-    box-sizing: border-box;
-  }
-  
-  .app__modal__box {
-    width: 398px;
-    border-radius: 8px;
-    box-shadow: 1px 0 2px 0 rgba(0,0,0,.16);
-    background-color: #fff;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 999;
+
+  display: none;
+  justify-content: center;
+  align-items: flex-start;
+  box-sizing: border-box;
+  width: 100%;
+  max-width: 100%;
+  padding: 160px 16px 16px;
+
+  background-color: rgba(0,0,0,0.6);
+  border-radius: 0;
+  &_visible {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 36px 0 22px;
-    &_title {
-      font-size: 18px;
-      font-weight: 700;
-      line-height: 1.22;
-      color: $text-color;
-    }
-    &_text {
-      max-width: 337px;
-      font-size: 16px;
-      line-height: 1.25;
-      color: $text-color;
-      text-align: center;
-      margin-top: 24px;
-    }
-    &_cancel {
-      font-size: 14px;
-      line-height: 1.71;
-      text-align: center;
-      color: $main-color;
-      text-decoration: underline;
-      cursor: pointer;
-      margin-top: 16px;
-    }
   }
-  
+}
+
+.app__modal__box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 398px;
+  padding: 36px 0 22px;
+
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 1px 0 2px 0 rgba(0,0,0,0.16);
+  &_title {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.22;
+    color: $text-color;
+  }
+  &_text {
+    max-width: 337px;
+    margin-top: 24px;
+
+    font-size: 16px;
+    line-height: 1.25;
+    text-align: center;
+    color: $text-color;
+  }
+  &_cancel {
+    margin-top: 16px;
+
+    font-size: 14px;
+    line-height: 1.71;
+    text-align: center;
+    color: $main-color;
+    text-decoration: underline;
+
+    cursor: pointer;
+  }
+}
