feat: add basic game layout

--- a/src/sass/layouts/_savannah-modal.scss
+++ b/src/sass/layouts/_savannah-modal.scss
@@ -35,7 +35,7 @@
     font-weight: 700;
     font-size: 18px;
     line-height: 1.22;
-    color: $text-color;
+    color: #37383c;
   }
   &_text {
     max-width: 337px;
@@ -44,7 +44,7 @@
     font-size: 16px;
     line-height: 1.25;
     text-align: center;
-    color: $text-color;
+    color: #37383c;
   }
   &_cancel {
     margin-top: 16px;
