--- a/src/sass/layouts/_savannah-startPage.scss
+++ b/src/sass/layouts/_savannah-startPage.scss
@@ -12,13 +12,13 @@
     margin-bottom: 60px;
 
     font-weight: 300;
-    font-size: 40px;
+    font-size: 32px;
     line-height: 1;
-    color: $text-color;
+    color: #6cffde;
     text-transform: uppercase;
     letter-spacing: 13px;
 
-    opacity: 0.9;
+    opacity: 0.8;
   }
   &__text {
     max-width: 565px;
@@ -28,7 +28,6 @@
     font-size: 18px;
     line-height: 24px;
     color: $text-color;
-    text-shadow: 0 2px 7px white;
 
     opacity: 0.8;
   }
