--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -29,3 +29,4 @@
 @import "layouts/savannah-modal";
 @import "layouts/savannah-startPage";
 @import "layouts/savannah-layout";
+@import "components/savannah-sparkles";
