feat: add user tool panel layout

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,7 +13,10 @@
 @import "components/wrapper";
 @import "components/burger-menu";
 @import "components/header-navigation";
+@import "components/user-tool";
+
 // Layout
+
 @import "layouts/header";
 @import "layouts/main";
 @import "layouts/footer";
