--- a/src/sass/layouts/_savannah-layout.scss
+++ b/src/sass/layouts/_savannah-layout.scss
@@ -1,4 +1,4 @@
-#app {
+.app {
   // min-height: 100vh;
   width: 100%;
 }
@@ -75,7 +75,12 @@
   display: block;
 }
 
+.hideBackgroundImg {
+  background-image: none;
+}
+
 .app__background {
+  background-image: url("/src/assets/images/savannah-bg.svg");
   background-repeat: no-repeat;
   background-position-x: center;
   background-position-y: 100%;
