--- a/src/sass/components/_header-navigation.scss
+++ b/src/sass/components/_header-navigation.scss
@@ -7,10 +7,10 @@
   height: 100vh;
   padding: 0;
 
-  background-color: rgba(45, 48, 58, 0.4);
+  background-color: rgba(45, 48, 58, .4);
   opacity: 0;
 
-  transition: opacity ease-in-out 0.5s;
+  transition: opacity ease-in-out .5s;
 
   &--active {
     left: 0;
@@ -32,9 +32,9 @@
   padding-left: 55px;
 
   background: $color-navigation-background;
-  box-shadow: 15px 0 25px rgba(0, 0, 0, 0.2);
+  box-shadow: 15px 0 25px rgba(0, 0, 0, .2);
 
-  transition: all 0.5s ease;
+  transition: all .5s ease;
 
   &__item {
     margin-bottom: 30px;
@@ -57,13 +57,13 @@
 
       border-bottom: 1px solid $color-navigation-link-active;
 
-      transition: all 0.5s ease;
+      transition: all .5s ease;
     }
   }
 
   &--active {
     left: 0;
 
-    transition: all 0.5s ease;
+    transition: all .5s ease;
   }
 }
