feat: add primary game logic

--- a/src/sass/components/_savannah-sparkles.scss
+++ b/src/sass/components/_savannah-sparkles.scss
@@ -1,9 +1,9 @@
 .sparkle-container {
   position: absolute;
-  bottom: -135px;
+  bottom: -30px;
   left: 50%;
 
-  width: 95px;
+  min-width: 95px;
   height: 95px;
   margin-left: -20px;
 }
