--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -33,3 +33,4 @@
 @import "layouts/savannah-startPage";
 @import "layouts/savannah-layout";
 @import "components/savannah-sparkles";
+@import "components/savannah-answers";
