--- a/src/sass/abstract/_savannah-constants.scss
+++ b/src/sass/abstract/_savannah-constants.scss
@@ -1,6 +1,3 @@
-$color-header: radial-gradient(circle, rgba(141, 218, 213, 1) 0%, rgba(0, 205, 172, 1) 100%);
-$color-body: linear-gradient(-225deg, #fffeff 0%, #d7fffe 100%);
-$color-menu-elements: #ffffffc7;
-$color-menu-elements-hover: #ffffff;
 $main-color: #00c49d;
 $text-color: #fff;
+$wrong-color: rgba(223, 31, 24, 0.753);
