feat: implement drag-n-drop and shuffle  to word blocks

--- a/src/sass/layouts/_english-puzzle.scss
+++ b/src/sass/layouts/_english-puzzle.scss
@@ -73,6 +73,9 @@
     background-color: #8ddad5;
     box-shadow: 2px 2px 3px 1px #00cdac;
   }
+  &:focus {
+    outline: none;
+  }
 }
 
 /* change selector to classname */
