--- a/src/sass/layouts/_modal-mistake.scss
+++ b/src/sass/layouts/_modal-mistake.scss
@@ -33,4 +33,7 @@
   &__description {
     @include font($size: 1.1rem, $height: 1.3rem, $weight: normal, $style: italic);
   }
+  &:hover {
+    top: 200px;
+  }
 }
