--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,5 @@
 @import "base/normalize";
+@import "base/animate";
 
 // Abstract
 @import "abstract/constants";
@@ -11,6 +12,7 @@
 //  Components
 @import "components/auth-tool";
 @import "components/wrapper";
+@import "components/container";
 @import "components/burger-menu";
 @import "components/header-navigation";
 @import "components/user-tool";
@@ -20,9 +22,10 @@
 @import "layouts/header";
 @import "layouts/main";
 @import "layouts/footer";
+@import "layouts/modal-settings";
 // pages
 
-// savannah-game 
+// savannah-game
 @import "abstract/savannah-constants";
 @import "components/savannah-button";
 @import "components/savannah-closeBtn";
