--- a/src/sass/audiocall.scss
+++ b/src/sass/audiocall.scss
@@ -1,4 +1,4 @@
-$var1: #0055FF;
+$var1: #0055ff;
 $var2: #006fb3;
 $var3: #ffffff;
 $var4: #014776;
@@ -6,321 +6,365 @@ $var5: #37383c;
 $var6: #7e919f;
 $var7: #2582e7;
 $var8: #e13a3a;
-$var9: #28c38a;
+$var9: #00c45f;
 
 body {
-	margin: 0 auto;
+  margin: 0 auto;
 }
 main {
-	display: -webkit-box;
-	display: flex;
-	-webkit-box-pack: justify;
-	justify-content: space-between;
-	-webkit-box-align: center;
-	align-items: center;
-	flex-wrap: wrap;
+  display: -webkit-box;
+  display: flex;
+  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  align-items: center;
 }
 .container-game {
-	font-family: Open Sans, Helvetica, Arial, sans-serif;
-	&__trainings-audiocall {
-		width: 100vw;
-		height: 100vh;
-		background-repeat: no-repeat;
-		background-position-y: 100%;
-		background-position-x: center;
-		transition: all 1s ease;
-		background-color: $var1;
-		background-image: url(../assets/svg/bg-audiocall-game.svg);
-		background-size: cover;
-		position: relative;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		overflow: hidden;
-		&__close {
-			width: 20px;
-			height: 20px;
-			background-image: url(../assets/svg/close-icon.svg);
-			background-size: cover;
-			position: absolute;
-			top: 27px;
-			right: 27px;
-			cursor: pointer;
-		}
-		&__intro {
-			position: absolute;
-			top: 50%;
-			margin-top: -150px;
-			height: 300px;
-			text-align: center;
-			right: 0;
-			left: 0;
-			&-title {
-				font-size: 40px;
-				font-weight: 300;
-				line-height: 1;
-				margin-bottom: 60px;
-				color: $var2;
-				color: $var3;
-				opacity: .8;
-				text-transform: uppercase;
-				-webkit-font-smoothing: antialiased;
-				letter-spacing: 3px;
-			}
-			/* color: #006fb3; */
-			&-text {
-				max-width: 565px;
-				margin: 0 auto 58px;
-				font-size: 18px;
-				line-height: 24px;
-				font-weight: 300;
-				color: $var3;
-				opacity: .8;
-			}
-		}
-		&__intro-btn, &__answer-btn {
-			display: inline-block;
-			cursor: pointer;
-			-webkit-appearance: none;
-			-moz-appearance: none;
-			appearance: none;
-			font-size: 24px;
-			font-weight: 300;
-			line-height: 1;
-			text-align: center;
-			padding: 19px 15px 21px;
-			text-decoration: none;
-			min-width: 162px;
-			color: $var3;
-			background: $var2;
-			border-bottom: 3px solid $var4;
-			border-radius: 4px;
-			transition: all .35s ease;
-			&:hover {
-				background: $var4;
-			}
-		}
-		&__answers {
-			display: none;
-			position: absolute;
-			top: 9%;
-			text-align: center;
-			right: 0;
-			left: 0;
-		}
-		&__answer {
-			display: inline-block;
-			vertical-align: top;
-			font-size: 24px;
-			line-height: 30px;
-			font-weight: 300;
-			max-width: 270px;
-			text-align: left;
-			position: relative;
-			padding: 20px 15px 20px 30px;
-			color: $var3;
-			transition: all .15s ease;
-			border-radius: 2px;
-			cursor: pointer;
-			margin: 15px 20px;
-			-webkit-user-select: none;
-			-moz-user-select: none;
-			-ms-user-select: none;
-			user-select: none;
-			&:hover {
-				background: hsla(0, 0%, 100%, .1);
-			}
-			&__m-answer-false {
-				text-decoration: line-through;
-				opacity: .7;
-				background: $var8;
-			}
-			&__m-answer-true {
-				background: $var9;
-			}
-			&:hover {
-				background-color: transparent;
-			}
-		}
-		&__number {
-			position: absolute;
-			left: 12px;
-			top: 23px;
-			font-size: 16px;
-			font-weight: 300;
-			opacity: .79;
-		}
-		&__speaker-container {
-			margin: 0 auto 5%;
-			position: relative;
-			min-height: 100px;
-			height: 100px;
-			max-height: 100px;
-			min-width: 100px;
-			width: 100px;
-			max-width: 100px;
-			display: -webkit-box;
-			display: -ms-flexbox;
-			display: flex;
-			-webkit-box-align: center;
-			-ms-flex-align: center;
-			align-items: center;
-			-webkit-box-pack: center;
-			-ms-flex-pack: center;
-			justify-content: center;
-			cursor: pointer;
-		}
-		&__sound-btn {
-			display: flex;
-			margin: 0 auto;
-			height: 32px;
-			width: 29px;
-			background-image: url(../assets/svg/speaker.svg);
-			background-size: contain;
-			background-position: center center;
-			background-repeat: no-repeat;
-		}
-		&__circle {
-			position: absolute;
-			top: 0;
-			left: 0;
-			right: 0;
-			bottom: 0;
-			background-color: rgba(255, 255, 255, 0.2);
-			border-radius: 50%;
-		}
-		&__number {
-			left: 18px;
-			top: 13px;
-		}
-		&__answer {
-			font-size: 24px;
-			padding: 10px 20px 13px 38px;
-			width: 100%;
-			margin-bottom: 8px;
-			margin-left: 0;
-			margin-right: 0;
-			max-width: 255px;
-		}
-	}
-	&__modal {
-		position: fixed;
-		top: 0;
-		bottom: 0;
-		left: 0;
-		right: 0;
-		width: 100%;
-		max-width: 100%;
-		z-index: 999;
-		padding: 36px 16px 16px;
-		background-color: rgba(0, 0, 0, .6);
-		display: none;
-		justify-content: center;
-		align-items: flex-start;
-		border-radius: 0;
-		box-sizing: border-box;
-		&__header {
-			position: absolute;
-			right: 20px;
-			top: 20px;
-			left: 20px;
-		}
-		&__body {
-			padding: 40px 0;
-			margin: 40px 0;
-			overflow: visible;
-			max-height: calc(100vh - 80px);
-			position: relative;
-		}
-		&__close-body {
-			position: absolute;
-			right: -30px;
-			top: 10px;
-			cursor: pointer;
-			width: 20px;
-			height: 20px;
-			background-image: url(../assets/svg/close-icon.svg);
-			background-position: 50%;
-			background-size: contain;
-			background-repeat: no-repeat;
-		}
-		&__footer {
-			margin-top: 14px;
-		}
-	}
-	&__crossword-modal__cont {
-		width: 398px;
-		border-radius: 8px;
-		box-shadow: 1px 0 2px 0 rgba(0, 0, 0, .16);
-		background-color: $var3;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		padding: 36px 0 22px;
-	}
-	&__crossword-modal__title {
-		font-size: 18px;
-		font-weight: 700;
-		line-height: 1.22;
-		color: $var5;
-	}
-	&__crossword-modal__text {
-		max-width: 337px;
-		font-size: 16px;
-		line-height: 1.25;
-		color: $var6;
-		text-align: center;
-		margin-top: 24px;
-	}
-	&__crossword-modal__btn-close {
-		padding: 11px 0;
-		width: 200px;
-		border-radius: 4px;
-		background-color: $var7;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		font-size: 14px;
-		font-weight: 600;
-		line-height: 1.43;
-		color: $var3;
-		margin-top: 48px;
-		cursor: pointer;
-	}
-	&__crossword-modal__cancel {
-		font-size: 14px;
-		line-height: 1.71;
-		text-align: center;
-		color: $var7;
-		text-decoration: underline;
-		cursor: pointer;
-		margin-top: 16px;
-	}
+  font-family: Open Sans, Helvetica, Arial, sans-serif;
+  &__trainings-audiocall {
+    position: relative;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+
+    background-color: $var1;
+    background-image: url(../assets/svg/bg-audiocall-game.svg);
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: 100%;
+    background-size: cover;
+
+    transition: all 1s ease;
+    &__close {
+      position: absolute;
+      top: 27px;
+      right: 27px;
+
+      width: 20px;
+      height: 20px;
+
+      background-image: url(../assets/svg/close-icon.svg);
+      background-size: cover;
+      cursor: pointer;
+    }
+    &__intro {
+      position: absolute;
+      top: 50%;
+      right: 0;
+      left: 0;
+
+      height: 300px;
+      margin-top: -150px;
+
+      text-align: center;
+      &-title {
+        margin-bottom: 60px;
+
+        font-weight: 300;
+        font-size: 40px;
+        line-height: 1;
+        color: $var2;
+        color: $var3;
+        text-transform: uppercase;
+        letter-spacing: 3px;
+
+        opacity: 0.8;
+
+        -webkit-font-smoothing: antialiased;
+      }
+      &-text {
+        max-width: 565px;
+        margin: 0 auto 58px;
+
+        font-weight: 300;
+        font-size: 18px;
+        line-height: 24px;
+        color: $var3;
+
+        opacity: 0.8;
+      }
+    }
+    &__intro-btn,
+    &__answer-btn {
+      display: inline-block;
+      min-width: 162px;
+      padding: 19px 15px 21px;
+
+      font-weight: 300;
+      font-size: 24px;
+      line-height: 1;
+      text-align: center;
+      color: $var3;
+      text-decoration: none;
+
+      background: $var2;
+      border-bottom: 3px solid $var4;
+      border-radius: 4px;
+      cursor: pointer;
+
+      transition: all 0.35s ease;
+
+      -webkit-appearance: none;
+         -moz-appearance: none;
+              appearance: none;
+      &:hover {
+        background: $var4;
+      }
+    }
+    &__answers {
+      position: absolute;
+      top: 9%;
+      right: 0;
+      left: 0;
+
+      display: none;
+
+      text-align: center;
+    }
+    &__answer {
+      position: relative;
+
+      display: inline-block;
+      max-width: 270px;
+      margin: 15px 20px;
+      padding: 20px 15px 20px 30px;
+
+      font-weight: 300;
+      font-size: 24px;
+      line-height: 30px;
+      vertical-align: top;
+      text-align: left;
+      color: $var3;
+
+      border-radius: 2px;
+      cursor: pointer;
+
+      transition: all 0.15s ease;
+
+      -webkit-user-select: none;
+         -moz-user-select: none;
+          -ms-user-select: none;
+              user-select: none;
+      &:hover {
+        background: hsla(0, 0%, 100%, 0.1);
+      }
+      &__m-answer-false {
+        text-decoration: line-through;
+
+        background: $var8;
+        opacity: 0.7;
+      }
+      &__m-answer-true {
+        background: $var9;
+      }
+      &:hover {
+        background-color: transparent;
+      }
+    }
+    &__number {
+      position: absolute;
+      top: 23px;
+      left: 12px;
+
+      font-weight: 300;
+      font-size: 16px;
+
+      opacity: 0.79;
+    }
+    &__speaker-container {
+      position: relative;
+
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      width: 100px;
+      min-width: 100px;
+      max-width: 100px;
+      height: 100px;
+      min-height: 100px;
+      max-height: 100px;
+      margin: 0 auto 5%;
+
+      cursor: pointer;
+    }
+    &__sound-btn {
+      display: flex;
+      width: 29px;
+      height: 32px;
+      margin: 0 auto;
+
+      background-image: url(../assets/svg/speaker.svg);
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: contain;
+    }
+    &__circle {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+
+      background-color: rgba(255, 255, 255, 0.2);
+      border-radius: 50%;
+    }
+    &__number {
+      top: 13px;
+      left: 18px;
+    }
+    &__answer {
+      width: 100%;
+      max-width: 255px;
+      margin-right: 0;
+      margin-bottom: 8px;
+      margin-left: 0;
+      padding: 10px 20px 13px 38px;
+
+      font-size: 24px;
+    }
+  }
+  &__modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 999;
+
+    display: none;
+    justify-content: center;
+    align-items: flex-start;
+    box-sizing: border-box;
+    width: 100%;
+    max-width: 100%;
+    padding: 36px 16px 16px;
+
+    background-color: rgba(0, 0, 0, 0.6);
+    border-radius: 0;
+    &__header {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      left: 20px;
+    }
+    &__body {
+      position: relative;
+
+      max-height: calc(100vh - 80px);
+      margin: 40px 0;
+      padding: 40px 0;
+      overflow: visible;
+    }
+    &__close-body {
+      position: absolute;
+      top: 10px;
+      right: -30px;
+
+      width: 20px;
+      height: 20px;
+
+      background-image: url(../assets/svg/close-icon.svg);
+      background-repeat: no-repeat;
+      background-position: 50%;
+      background-size: contain;
+      cursor: pointer;
+    }
+    &__footer {
+      margin-top: 14px;
+    }
+  }
+  &__crossword-modal__cont {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 398px;
+    padding: 36px 0 22px;
+
+    background-color: $var3;
+    border-radius: 8px;
+    box-shadow: 1px 0 2px 0 rgba(0, 0, 0, 0.16);
+  }
+  &__crossword-modal__title {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.22;
+    color: $var5;
+  }
+  &__crossword-modal__text {
+    max-width: 337px;
+    margin-top: 24px;
+
+    font-size: 16px;
+    line-height: 1.25;
+    text-align: center;
+    color: $var6;
+  }
+  &__crossword-modal__btn-close {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    margin-top: 48px;
+    padding: 11px 0;
+
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 1.43;
+    color: $var3;
+
+    background-color: $var7;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  &__crossword-modal__cancel {
+    margin-top: 16px;
+
+    font-size: 14px;
+    line-height: 1.71;
+    text-align: center;
+    color: $var7;
+    text-decoration: underline;
+
+    cursor: pointer;
+  }
 }
 .small-circle {
-	-webkit-transition: -webkit-transform 0.14s ease-out;
-	transition: -webkit-transform 0.14s ease-out;
-	transition: transform 0.14s ease-out;
-	transition: transform 0.14s ease-out, -webkit-transform 0.14s ease-out;
-	-webkit-transform: scale(0.7);
-	transform: scale(0.7);
+  -webkit-transform: scale(0.7);
+          transform: scale(0.7);
+
+  -webkit-transition: -webkit-transform 0.14s ease-out;
+          transition: -webkit-transform 0.14s ease-out;
+          transition:         transform 0.14s ease-out;
+          transition:         transform 0.14s ease-out, -webkit-transform 0.14s ease-out;
 }
 .big-circle {
-	-webkit-transition: -webkit-transform 0.16s ease-in;
-	transition: -webkit-transform 0.16s ease-in;
-	transition: transform 0.16s ease-in;
-	transition: transform 0.16s ease-in, -webkit-transform 0.16s ease-in;
-	-webkit-transform: scale(0.7);
-	transform: scale(0.7);
+  -webkit-transform: scale(0.7);
+          transform: scale(0.7);
+
+  -webkit-transition: -webkit-transform 0.16s ease-in;
+          transition: -webkit-transform 0.16s ease-in;
+          transition:         transform 0.16s ease-in;
+          transition:         transform 0.16s ease-in, -webkit-transform 0.16s ease-in;
 }
 .hide {
 	display: none;
 }
-.show-flex {
-	display: flex;
-}
 .show {
 	display: block;
+}
+.show-flex {
+	display: flex;
 }
 // media screen and (max-width:830px) {
 // 	container-game__trainings-audiocall__answer: hover ;
