refactor: styles and apply csscomb

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -25,4 +25,5 @@
 @import "pages/index";
 
 // english-puzzle
-@import "layouts/english-puzzle";
+@import "layouts/englishPuzzle-layout";
+@import "components/englishPuzzle-buttons";
