--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -33,3 +33,7 @@
 @import "layouts/savannah-startPage";
 @import "layouts/savannah-layout";
 @import "components/savannah-sparkles";
+
+// english-puzzle
+@import "layouts/englishPuzzle-layout";
+@import "components/englishPuzzle-buttons";
