refactor: refactor code

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -20,7 +20,7 @@
 @import "layouts/header";
 @import "layouts/main";
 @import "layouts/footer";
-@import "layouts/modal-mistake";
+@import "layouts/modal-error";
 
 // pages
 @import "pages/index";
