--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,6 +16,7 @@
 @import "components/burger-menu";
 @import "components/header-navigation";
 @import "components/user-tool";
+@import "components/swiper";
 
 // Layout
 
