--- a/src/sass/layouts/_modal-settings.scss
+++ b/src/sass/layouts/_modal-settings.scss
@@ -3,6 +3,8 @@
 
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 80%;
   max-height: 80%;
   padding: 15px;
