refactor: add quick start button

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -23,3 +23,7 @@
 
 // pages
 @import "pages/index";
+
+// english-puzzle
+@import "layouts/englishPuzzle-layout";
+@import "components/englishPuzzle-buttons";
