feat: add events for clicks on sentence translate button and on puzzle pieces

--- a/src/sass/components/_englishPuzzle-buttons.scss
+++ b/src/sass/components/_englishPuzzle-buttons.scss
@@ -23,6 +23,10 @@
   margin-right: 10px;
 
   background-size: cover;
+
+  &_active {
+    background-color: #8ddad5;
+  }
   &_autospeech {
     background-image: url(/src/assets/images/ep-icons/ep-audio.png);
   }
