--- a/src/sass/layouts/_englishPuzzle-layout.scss
+++ b/src/sass/layouts/_englishPuzzle-layout.scss
@@ -28,7 +28,7 @@
 
 .ep-sentences-word {
   width: 100px;
-  height: 20px;
+  height: 32px;
 
   text-align: center;
 
@@ -45,9 +45,8 @@
 }
 
 .ep-play__buttons {
-  position: relative;
-  left: 400px;
-
+  display: flex;
+  justify-content: center;
   margin-top: 20px;
 }
 
