feat: add render cards

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -16,3 +16,7 @@ body {
   @extend %font-prim;
   @include font($size: 1.6rem, $height: 1.85rem, $weight: normal);
 }
+
+.hidden {
+  display: none;
+}
