--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,6 +17,7 @@
 @import "components/header-navigation";
 @import "components/user-tool";
 @import "components/swiper";
+@import "components/card";
 
 // Layout
 
