--- a/src/sass/layouts/_modal-settings.scss
+++ b/src/sass/layouts/_modal-settings.scss
@@ -15,6 +15,19 @@
 
   @include font($size: 1.6rem, $height: 2rem, $weight: normal);
 
+  &__wrapper {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: baseline;
+    width: 100%;
+
+    input {
+      margin-right: 10px;
+
+      cursor: pointer;
+    }
+  }
+
   &__overlay {
     position: absolute;
     top: 0;
