--- a/src/sass/components/_savannah-rating.scss
+++ b/src/sass/components/_savannah-rating.scss
@@ -1,64 +1,81 @@
-.app__rating {
+.rating__container {
   position: relative;
 
   width: 100%;
-  height: 40px;
+  height: 100px;
 }
 
-.rating {
+.rating__row {
+  display: flex;
+  width: 250px;
+  height: 25px;
+}
+
+.rating__group {
   position: absolute;
   top: 20px;
   right: 0;
+}
 
-  display: flex;
+.rating__round {
+  position: absolute;
+  top: 70px;
+  right: 0;
+}
 
-  transform: translate(-40%, -50%) rotateY(180deg);
-  &__input {
-    display: none;
-  }
-  &__label {
-    display: block;
-    width: 25px;
+.text {
+  position: absolute;
+  top: 46px;
+  right: -7px;
 
-    cursor: pointer;
-    &:before {
-      content: "★";
-      position: relative;
+  width: 250px;
+  height: 25px;
 
-      display: block;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 18px;
+  color: $text-color;
 
-      font-size: 30px;
-      color: $main-color;
-    }
-    &:after {
-      content: "★";
-      position: absolute;
-      top: 0;
-
-      display: block;
-
-      font-size: 30px;
-      color: gold;
-
-      transform: 0.3s;
-      opacity: 0;
-    }
-  }
-  &__text {
-    position: absolute;
-    top: 40px;
-    right: 47px;
-
-    font-weight: 300;
-    font-size: 18px;
-    color: $text-color;
-
-    opacity: 0.8;
+  opacity: .8;
+  &_round {
+    top: 95px;
   }
 }
 
-.rating__label:hover:after,
-.rating__label:hover ~ .rating__label:after,
-.rating__input:checked ~ .rating__label:after {
-  opacity: 1;
+.gold::before {
+  content: "★";
+  position: relative;
+
+  display: block;
+  width: 25px;
+
+  font-size: 30px;
+  color: #ffd900;
+
+  cursor: pointer;
+}
+
+.gold_strong::before {
+  content: "★";
+  position: relative;
+
+  display: block;
+  width: 25px;
+
+  font-size: 30px;
+  color: #ffd900!important;
+
+  cursor: pointer;
+}
+.star::before {
+  content: "★";
+  position: relative;
+
+  display: block;
+  width: 25px;
+
+  font-size: 30px;
+  color: #00c49d;
+
+  cursor: pointer;
 }
