feat: add click event to puzzle pieces, basic logic to rendering round and game board

--- a/src/sass/components/_englishPuzzle-buttons.scss
+++ b/src/sass/components/_englishPuzzle-buttons.scss
@@ -1,6 +1,7 @@
 .ep__button {
   width: 200px;
   height: 40px;
+  margin-left: 10px;
 
   color: #ffffff;
 
@@ -20,7 +21,6 @@
 .tips__button {
   width: 40px;
   height: 40px;
-  margin-right: 10px;
 
   background-size: cover;
 
