feat: implement autofocus set for cards

--- a/src/sass/layouts/_modal-settings.scss
+++ b/src/sass/layouts/_modal-settings.scss
@@ -20,6 +20,7 @@
     flex-wrap: nowrap;
     align-items: baseline;
     width: 100%;
+    max-width: 1200px;
 
     input {
       margin-right: 10px;
