feat: add school api for geting words, plug game to menu

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -37,3 +37,6 @@
 @import "layouts/savannah-startPage";
 @import "layouts/savannah-layout";
 @import "components/savannah-sparkles";
+
+// sprint-game
+@import "sprint-game/style";
