refactor: rename constants, remove method args in englishPuzzleView and define createPuzzle fn in separate module

--- a/src/sass/layouts/_englishPuzzle-layout.scss
+++ b/src/sass/layouts/_englishPuzzle-layout.scss
@@ -28,9 +28,12 @@
     width: calc(100% + 22px);
     display: flex;
     margin-left: -20px;
-    height: 53px;
+    height: 52px;
     overflow: hidden;
     border-bottom:  1px solid lightpink;
+    &_active {
+      height: 53px;
+    }
     &:last-child {
       border: none;
     }
