feat: add modal window template and changing view for active line number

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -27,3 +27,4 @@
 // english-puzzle
 @import "layouts/englishPuzzle-layout";
 @import "components/englishPuzzle-buttons";
+@import "layouts/englishPuzzle-modal";
