--- a/src/sass/layouts/_englishPuzzle-layout.scss
+++ b/src/sass/layouts/_englishPuzzle-layout.scss
@@ -52,6 +52,11 @@
       // margin-top: 17px;
       // margin-right: 10px;
       margin: 17px 10px 10px 0px; 
+      &-active {
+        border: 2px solid red;
+        padding-top: 4px;
+        background-color: white;
+      }
     }
   }
 }
