feat: add btn 'show answer'

--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -2,7 +2,7 @@
   font-size: 1.2em;
   font-family: monospace;
 
-  &__show-answer {
+  &__btn-check {
     width: 250px;
     margin-top: 10px;
   }
