feat: add game round statistics

--- a/src/sass/components/_englishPuzzle-buttons.scss
+++ b/src/sass/components/_englishPuzzle-buttons.scss
@@ -32,7 +32,7 @@
   }
   &_autospeech-grey {
     background-color: rgba(0, 0, 0, 0);
-    background-image: url(/src/assets/images/ep-icons/ep-audio-grey.png);;
+    background-image: url(/src/assets/images/ep-icons/ep-audio-grey.png);
   }
   &_translate {
     background-image: url(/src/assets/images/ep-icons/ep-tip.png);
