--- a/src/sass/layouts/_englishPuzzle-modal.scss
+++ b/src/sass/layouts/_englishPuzzle-modal.scss
@@ -20,7 +20,7 @@
   &__body {
     position: relative;
     padding: 20px 40px;
-    width: 800px;
+    width: 700px;
     height: 800px;
     background-color: white;
     border-radius: 8px;
@@ -35,10 +35,57 @@
     height: 150px;
     border-radius: 8px;
     border: 1px solid purple;
+    background-size: cover;
   }
 
   &__description {
     margin-top: 30px;
+  }
+
+  &__main {
+    margin-top: 30px;
+    &-line {
+      display: flex;
+      margin-bottom: 8px;
+      height: 22px;
+      align-items: center;
+    }
+  }
+
+  &__wrong-words-count {
+    color: white;
+    width: 22px;
+    height: 22px;
+    background-color: red;
+    border-radius: 50%;
+    padding-top: 5px;
+    text-align: center;
+    margin-left: 8px;
+  }
+
+  &__right-words-count {
+    color: white;
+    width: 22px;
+    height: 22px;
+    background-color: #00FF00;
+    border-radius: 50%;
+    padding-top: 5px;
+    text-align: center;
+    margin-left: 8px;
+  }
+
+  &__audioBtn {
+    width: 22px;
+    height: 22px;
+    margin-right: 8px;
+    background-color: rgba(0, 0, 0, 0);
+    background-image: url(/src/assets/images/ep-icons/ep-audio-grey.png);
+    background-size: cover;
+    opacity: 0.7;
+    cursor: pointer;
+    &:hover {
+      opacity: 1;
+    }
   }
 
   &__buttons {
