--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -38,3 +38,12 @@
 @import "layouts/savannah-startPage";
 @import "layouts/savannah-layout";
 @import "components/savannah-sparkles";
+
+//speak_it-game
+@import "components/speak_it/speak_it-main_container.scss";
+@import "components/speak_it/speak_it-button_container.scss";
+@import "components/speak_it/speak_it-constants.scss";
+@import "components/speak_it/speak_it-inner_container.scss";
+@import "components/speak_it/speak_it-navigation-container.scss";
+@import "components/speak_it/speak_it-words_container.scss";
+@import "components/speak_it/speak_it-modals.scss";
