--- a/src/sass/components/speak_it/speak_it-modals.scss
+++ b/src/sass/components/speak_it/speak_it-modals.scss
@@ -34,7 +34,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-
+    text-align: center;
     position: fixed;
     width: 100%;
     height: 100%;
@@ -65,4 +65,16 @@
     font-weight: 600;
     font-size: 14px;
     border-radius: 4px;
+}
+
+
+@media only screen and (min-width: 320px) and (max-width: 700px) {
+    .modal_window {
+        width: 90vw;
+        padding: 2vw;
+    }
+
+    .app__modal__box_title {
+        text-align: center;
+    }
 }
